# wraithwall-toolkit

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  publish.sh
.github/workflows/: ci.yml  publish.yml
canary-kit/: .gitignore  README.md  pyproject.toml
canary-kit/canary_kit/: __init__.py  __main__.py  filestore.py  registry.py  storage.py  tokens.py
canary-kit/examples/: quickstart.py
canary-kit/tests/: test_canary_kit.py
dml-spec/: .gitignore  LICENSE  README.md  pyproject.toml
dml-spec/dml/: __init__.py  __main__.py  io.py  mesh.py  signing.py  spec.py  validator.py
dml-spec/examples/: example_mesh.yaml  example_traps.yaml  quickstart.py
dml-spec/tests/: test_io.py  test_mesh.py  test_signing.py  test_validator.py
docs/: launch-film-preproduction.md  render_launch_film.py  render_oss_video.py  voiceover-guide.txt  voiceover-script.txt
honeypot-mitre/: .gitignore  README.md  conftest.py  pyproject.toml
honeypot-mitre/examples/: quickstart.py  sample_cowrie.json
honeypot-mitre/honeypot_mitre/: __init__.py  __main__.py  actors.py  analyzer.py  dedup.py  mitre.py  parsing.py  pipeline.py  scoring.py
honeypot-mitre/tests/: _no_anthropic_check.py  test_actors.py  test_dedup.py  test_mitre.py  test_parsing.py  test_scoring.py
incidents/: 2026-05-31-outlaw-mdrfckr.md
wraithmesh/: .gitignore  LICENSE  README.md  pyproject.toml
wraithmesh/examples/: mesh.json.example  quickstart.py
wraithmesh/schema/: manifest.schema.json  observation.schema.json
wraithmesh/tests/: test_aggregator.py  test_canary_sensor.py  test_cowrie_sensor.py  test_dml_bridge.py  test_manifest.py  test_observation.py  test_poisoning.py  test_reputation.py  test_tie_store.py
wraithmesh/wraithmesh/: __init__.py  __main__.py  dml_bridge.py  egress.py  equivalence.py  manifest.py  metrics.py  models.py  poisoning.py  reputation.py  signing.py  store.py  tie_policy.py  trust.py  uplink.py
wraithmesh/wraithmesh/aggregator/: __init__.py  ingest.py  sqlite_store.py  store.py
wraithmesh/wraithmesh/sensor/: __init__.py  canary.py  cowrie.py  factory.py  gateway.py  inbox.py
