[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canary-kit"
version = "0.1.0"
description = "Supply-chain canary token minting and beacon/trigger detection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "niffy_hunt" }]
keywords = ["canary", "supply-chain", "security", "honeytoken", "deception"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=4.0"]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://wraithwall.online"
Repository = "https://github.com/inboxBodyguard"

[project.scripts]
canary-kit = "canary_kit.__main__:main"

[tool.setuptools.packages.find]
include = ["canary_kit*"]
