[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honeypot-mitre"
version = "0.1.0"
description = "Structured MITRE ATT&CK mapping, a deterministic threat score, and replay dedup from raw Cowrie honeypot logs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "niffy_hunt" }]
keywords = ["honeypot", "cowrie", "mitre", "attack", "threat-intelligence", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
llm = ["anthropic"]

[project.urls]
Homepage = "https://wraithwall.online"
Repository = "https://github.com/niffyhunt/wraithwall-toolkit"
Documentation = "https://wraithwall.online/docs"
"Bug Tracker" = "https://github.com/niffyhunt/wraithwall-toolkit/issues"

[project.scripts]
honeypot-mitre = "honeypot_mitre.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["honeypot_mitre"]
