[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wraithmesh"
version = "0.2.0"
description = "Distributed deception sensor mesh — equivalence-class observations, signed egress, Cowrie tail adapter."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "niffy_hunt" }]
keywords = ["deception", "honeypot", "cowrie", "threat-intelligence", "mesh", "telemetry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "honeypot-mitre>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
dml = ["dml-spec>=0.2.0"]

[project.urls]
Homepage = "https://wraithwall.online"
Repository = "https://github.com/niffyhunt/wraithwall-toolkit"
Documentation = "https://wraithwall.online/docs"
"Bug Tracker" = "https://github.com/niffyhunt/wraithwall-toolkit/issues"

[project.scripts]
wraithmesh = "wraithmesh.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["wraithmesh"]

[tool.hatch.build.targets.sdist]
include = [
    "wraithmesh/**/*.py",
    "schema/*.json",
    "examples/*",
    "tests/*",
]